tests/ui/rfcs/rfc-2632-const-trait-impl/call-generic-method-nonconst.stderr
error[E0277]: the trait bound `S: ~const Foo<false>` is not satisfied
  --> $DIR/call-generic-method-nonconst.rs:23:34
   |
LL | pub const EQ: bool = equals_self(&S);
   |                      ----------- ^^ the trait `Foo<false>` is not implemented for `S`
   |                      |
   |                      required by a bound introduced by this call
   |
   = help: the trait `Foo` is implemented for `S`
note: required by a bound in `equals_self`
  --> $DIR/call-generic-method-nonconst.rs:16:25
   |
LL | const fn equals_self<T: ~const Foo>(t: &T) -> bool {
   |                         ^^^^^^^^^^ required by this bound in `equals_self`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
